fix: add overflow class

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   html {
-    @apply hidden overscroll-none;
+    @apply overflow-hidden overscroll-none;
     -webkit-font-smoothing: antialiased;
     text-size-adjust: 100%;
   }
